<resources>
    <string name="app_name">KiU_exchange_rate</string>

    <string name="str_title">환율 계산</string>
    <string name="str_remit_country">송금국가 :</string>
    <string name="str_receive_country">수취국가 :</string>
    <string name="str_exchange_rate">환율 :</string>
    <string name="str_search_time">조회시간 :</string>
    <string name="str_remittance">송금액 :</string>
    <string name="str_calculate">계산하기</string>

    <string name="country_usd">미국(USD)</string>
    <string name="country_krw">한국(KRW)</string>
    <string name="str_krw">KRW</string>
    <string name="country_jpy">일본(JPY)</string>
    <string name="str_jpy">JPY</string>
    <string name="country_php">필리핀(PHP)</string>
    <string name="str_php">PHP</string>

    <string name="str_result">수취금액은 %s 입니다.</string>

    <string name="str_usd">USD</string>
</resources>